Add SIMD range support to TSDB doc values